library/general/requiredgpuruntimeclass/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: requiredgpuruntimeclass
tests:
- name: gpu-with-runtimeclass
  template: template.yaml
  constraint: samples/gpu-with-runtimeclass/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/gpu-with-runtimeclass/example_allowed.yaml
    assertions:
    - violations: no
- name: gpu-without-runtimeclass
  template: template.yaml
  constraint: samples/gpu-without-runtimeclass/constraint.yaml
  cases:
  - name: example-disallowed
    object: samples/gpu-without-runtimeclass/example_disallowed.yaml
    assertions:
    - violations: yes
- name: no-gpu
  template: template.yaml
  constraint: samples/no-gpu/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/no-gpu/example_allowed.yaml
    assertions:
    - violations: no
